--- a/CookPopularControl/Themes/LabelStyle.xaml
+++ b/CookPopularControl/Themes/LabelStyle.xaml
@@ -122,7 +122,7 @@
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Padding" Value="5" />
         <Setter Property="HasCloseButton" Value="True" />
-        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
         <Setter Property="ItemContainerStyle" Value="{StaticResource GroupLabelItemStyle}" />
         <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="0" />
