--- a/CookPopularControl/Themes/TextBoxStyle.xaml
+++ b/CookPopularControl/Themes/TextBoxStyle.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
-                    xmlns:pc="clr-namespace:CookPopularControl.Controls">
+                    xmlns:pc="clr-namespace:CookPopularControl.Controls"
+                    xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/TextBoxBaseBaseStyle.xaml" />
@@ -11,8 +12,10 @@
         <Setter Property="common:TextElementAttached.PlaceHolder" Value="请输入文本..." />
         <Setter Property="common:TextElementAttached.PlaceHolderBrush" Value="{DynamicResource FieldPlaceHolderBrush}" />
         <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="2" />
-        <Setter Property="pc:TextBoxBaseAssistant.EllipsisPlacement" Value="Left" />
-        <Setter Property="pc:TextBoxBaseAssistant.IsEllipsisEnabled" Value="True" />
+        <Setter Property="pc:TextBoxBaseAssistant.IsEllipsisEnabled" Value="{Binding RelativeSource={RelativeSource Self},Path=IsFocused,Converter={pt:BooleanToReBooleanConverter}}" />
+        <Setter Property="pc:TextBoxBaseAssistant.IsFirstChecked" Value="True" />
+        <Setter Property="pc:TextBoxBaseAssistant.IsTrimming" Value="False" />
+        <Setter Property="pc:TextBoxBaseAssistant.EllipsisPlacement" Value="Center" />
         <Setter Property="pc:TextBoxBaseAssistant.IsShowToolTip" Value="True" />
         <Style.Triggers>
             <MultiTrigger>
