--- a/CookPopularControl/Themes/BaseStyle/TimePickerBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TimePickerBaseStyle.xaml
@@ -92,8 +92,8 @@
                                 <Button Width="30" Height="30"
                                         Content="确定"
                                         Command="{x:Static pc:Clock.ConfirmCommand}"
-                                        Visibility="{TemplateBinding pc:ClockAssistant.IsAddConfirmButton, Converter={pt:BooleanToVisibilityConverter}}"
-                                        common:FrameworkElementBaseAttached.CornerRadius="15" />
+                                        common:FrameworkElementBaseAttached.CornerRadius="15"
+                                        Visibility="{TemplateBinding pc:ClockAssistant.IsAddConfirmButton, Converter={pt:BooleanToVisibilityConverter}}" />
                             </UniformGrid>
                         </Grid>
                     </Border>
@@ -127,13 +127,14 @@
                                      HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                      VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
                                      common:FrameworkElementBaseAttached.CornerRadius="{TemplateBinding common:FrameworkElementBaseAttached.CornerRadius}"
-                                     common:TextElementAttached.PlaceHolder="{TemplateBinding common:TextElementAttached.PlaceHolder}" />
+                                     common:TextElementAttached.PlaceHolder="{TemplateBinding common:TextElementAttached.PlaceHolder}"
+                                     pc:TextBoxBaseAssistant.IsTrimming="False" />
                             <ToggleButton x:Name="PART_Button" Grid.Column="1"
                                           Foreground="{TemplateBinding Foreground}"
-                                          Style="{DynamicResource ToggleButtonTransparentIconStyle}"
                                           common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource ClockGeometry}"
                                           common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight}"
-                                          common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}" />
+                                          common:FrameworkElementBaseAttached.IconWidth="{TemplateBinding common:FrameworkElementBaseAttached.IconWidth}"
+                                          Style="{DynamicResource ToggleButtonTransparentIconStyle}" />
                             <Popup x:Name="PART_Popup"
                                    AllowsTransparency="True"
                                    IsOpen="{Binding ElementName=PART_Button, Path=IsChecked, Mode=TwoWay}"
